--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,8 @@
   font-family: "Open Sans", sans-serif;
   box-sizing: border-box;
 }
+main {
+}
 header {
   background-image: linear-gradient(0deg, #d9afd9 0%, #97d9e1 100%);
   height: 115px;
@@ -104,6 +106,7 @@ main {
   margin-left: 25px;
   margin-right: 25px;
   text-align: justify;
+  padding-bottom: 30px;
 }
 .icon {
   position: fixed;
